add content w/o timer

--- a/index.html
+++ b/index.html
@@ -10,21 +10,23 @@
 	<!-- ==================Start Css Link===================== -->
 	<!-- favicon -->
 	<link rel="shortcut icon" type="image/x-icon" href="assets/images/favicon.ico">
-	<!-- googlefonts -->
-	<link href="https://fonts.googleapis.com/css?family=Oswald:400,700&subset=cyrillic" rel="stylesheet">
-	<link href="https://fonts.googleapis.com/css?family=Roboto+Slab:400,700&subset=cyrillic" rel="stylesheet">
-	<link href="https://fonts.googleapis.com/css?family=Play:400,700&subset=cyrillic" rel="stylesheet">
-	<!-- bootstrap css link -->
 	<link href="css/bootstrap.min.css" rel="stylesheet">
+	<link href="css/fonts.css" rel="stylesheet">
 	<link href="css/style.css" rel="stylesheet">
 	<!-- ==================End Css Link===================== -->
 </head>
 <body>
 	<header>
-		
+		<img src="images/logo.png" class="logo"/>
 	</header>
 	<main>
-
+		<h2>САЙТ НАХОДИТСЯ В РАЗРАБОТКЕ</h2>
+		<h3>+7 (495) 730-07-10 <br> г. Москва, Благовещенский переулок, д.1</h3>
+		<div class="social">
+			<a href="" class="fb"><img src="images/facebook.png" alt="facebook"></a>
+			<a href="" class="inst"><img src="images/instagram.png" alt="instagram"></a>
+			<a href="" class="YT"><img src="images/youtube.png" alt="youtube"></a>
+		</div>
 	</main>
 	<footer>
 
