--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </head>
 <body>
 	<header>
-		<img src="images/logo.png" class="logo"/>
+		<img src="images/logo.svg" class="logo"/>
 	</header>
 	<main>
 		<h2>САЙТ НАХОДИТСЯ В РАЗРАБОТКЕ</h2>
