--- a/index.html
+++ b/index.html
@@ -25,8 +25,10 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-md-12">
-					<h2>ОСТАВЬТЕ ЗАЯВКУ</h2>
-					<h4><span>и получите индивидуальное</span> коммерческое предложение</h4>
+					<h3>
+						<div>Вы можете оставить свою заявку и получить</div>
+						<div>индивидуальное коммерческое предложение</div>
+					</h3>
 				</div>
 			</div>
 			<div class="row">
@@ -77,7 +79,7 @@
 				</div>
 			</div>
 		</div>
-		<h3>+7 (495) 730-07-10 <br> г. Москва, Благовещенский переулок, д.1</h3>
+		<h4>+7 (495) 730-07-10 <br> г. Москва, Благовещенский переулок, д.1</h4>
 		<div class="social">
 			<a href="https://www.instagram.com/mone_moscow/" class="fb"><img src="images/facebook.png" alt="facebook"></a>
 			<a href="https://www.facebook.com/monebeautysalons/" class="inst"><img src="images/instagram.png" alt="instagram"></a>
