--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 						<div class="form-group col-md-12 col-sm-12 col-xs-12 mb-30">
 							<div class="single-input skin_feedback flex">
 								<input id="m6" type="checkbox">
-								<label for="m6">Даю согласие на обработку моих персональных данных *</label>
+								<label for="m6" class="label">Даю согласие на обработку моих персональных данных *</label>
 							</div>
 						</div>
 					</div>
