--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<title>MONE</title>
 	<!-- ==================Start Css Link===================== -->
 	<!-- favicon -->
-	<link rel="shortcut icon" type="image/x-icon" href="assets/images/favicon.ico">
+	<link rel="shortcut icon" type="image/x-icon" href="images/favicon.ico">
 	<link href="css/bootstrap.min.css" type="text/css" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="css/fullpage.css" />
 	<link href="css/fonts.css" type="text/css" rel="stylesheet">
