--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 		<img src="images/logo.svg" class="logo"/>
 	</header>
 	<main class="wrapper">
-		<article class="art art__0">
+		<article class="art art-0">
 			<div class="art__wrapper">
 				<img src="images/logo_small.svg" alt="logo" class="art-0__logo-1">
 				<span class="clr-white art-0__text-1">ОФИЦИАЛЬНЫЙ<br/>СТИЛИСТ</span>
@@ -34,6 +34,26 @@
 			<div class="art__wrapper">
 				<img src="images/logo_white.svg" alt="logo" class="art-0__logo-3">
 				<p class="clr-white art-0__text-3">ПРОФЕССИОНАЛЬНАЯ<br/>КОСМТИКА ДЛЯ ВОЛОС</p>
+			</div>
+		</article>
+		<article class="art art-1">
+			<div class="art__wrapper art-1__left">
+				<div class="art-1__img-1"></div>
+			</div>
+			<div class="art__wrapper art-1__right">
+				<div class="art-1__banner">
+					<img src="images/img_1-1.svg" alt="iamge" class="art-1__img-2">
+					<img src="images/img_1-2.svg" alt="iamge" class="art-1__img-3">
+					<img src="images/img_1-3.svg" alt="iamge" class="art-1__img-4">
+				</div>
+				<div class="art-1__desc">
+					<p class="clr-black art-1__desc__text-1">СОЗДАН ПАРИКМХЕРАМИ<br/>ДЛЯ ПАРИКМХЕРОВ</p>
+					<p class="clr-black art-1__desc__text-2">
+						<span class="clr-white">НАША ФИЛОСОФИЯ</span>
+						<br/>
+						МЫ ХОТИМ ЧТОБЫ С ПОМОЩЬЮ<br/>НАШИХ СОВРЕМЕННЫХ,<br/>ПРЕМИАЛЬНЫХ ПРОДУКТОВ<br/>ЖЕНЩИНА БЫЛА ВСЕГДА<br/>ПРИВЛЕКАТЕЛЬНА И НЕОТРАЗИМА,<br/>А ПАРИКМАХЕР ВДОХНОВЛЕН
+					</p>
+				</div>
 			</div>
 		</article>
 	</main>
