--- a/index.html
+++ b/index.html
@@ -56,6 +56,22 @@
 				</div>
 			</div>
 		</article>
+		<article class="art art-2">
+			<div class="art__wrapper art-2__left">
+				<div class="art-2__main">
+					<span class="clr-black art-2__text-1">Top Color</span>
+					<span class="clr-white art-2__text-2">СТОЙКАЯ КРЕМ-КРАСКА<br/>ДЛЯ ВОЛОС</span>
+					<img src="images/img_2-1.svg" alt="image" class="art-2__img-1">
+					<span class="clr-black art-2__text-4 art-2__text-4-bold">Уникальная формула PENTA CARE SYSTEM:</span>
+					<span class="clr-black art-2__text-4">Насыщенный и устойчивый цвет<br/>благодаря Chroma Care Protection</span>
+					<span class="clr-black art-2__text-4">Аргановое масло для максимальной гладкости<br/>и блеска волос</span>
+					<span class="clr-black art-2__text-4">Экстракт Алоэ для комфорта при окрашивании<br/>и защиты кожи головы</span>
+				</div>
+			</div>
+			<div class="art__wrapper art-2__right">
+				<div class="art-2__img-2"></div>
+			</div>
+		</article>
 	</main>
 	<footer>
 		<h2>САЙТ НАХОДИТСЯ В РАЗРАБОТКЕ</h2>
