--- a/index.html
+++ b/index.html
@@ -73,24 +73,36 @@
 			</div>
 		</article>
 		<article class="art art-3">
-				<div class="art__wrapper art-3__left">
-					<div class="art-3__main">
-						<span class="clr-black art-3__text-1">Top Color</span>
-						<span class="clr-white art-3__text-2">СТОЙКАЯ КРЕМ-КРАСКА<br/>ДЛЯ ВОЛОС</span>
-						<img src="images/img_2-1.svg" alt="image" class="art-3__img-1">
-						<span class="clr-black art-3__text-4 art-3__text-4-bold">Уникальная формула PENTA CARE SYSTEM:</span>
-						<span class="clr-black art-3__text-4">Насыщенный и устойчивый цвет<br/>благодаря Chroma Care Protection</span>
-						<span class="clr-black art-3__text-4">Аргановое масло для максимальной гладкости<br/>и блеска волос</span>
-						<span class="clr-black art-3__text-4">Экстракт Алоэ для комфорта при окрашивании<br/>и защиты кожи головы</span>
-					</div>
+			<div class="art__wrapper art-3__left">
+				<div class="art-3__main">
+					<span class="clr-white art-3__text-2">ОСВЕТЛЯЮЩИЙ<br/>ПОРОШОК</span>
+					<span class="clr-main art-3__text-1">FLASH<br/>BLOND</span>
+					<span class="clr-white art-3__text-4">Система BOND REBUILDER SYSTEM<br/>восстанавливает поврежденные участки кортекса и волокна волос</span>
+					<span class="clr-white art-3__text-4">VITAOILS - комплекс из 5 масел: с высоким содержанием витаминов A, E, D жирных кислот</span>
+					<img src="images/img_3-1.png" alt="image" class="art-3__img-1">
+					<span class="clr-white art-3__text-4">До 9 уровней осветления<br/>Мощный питательный и восстанавливающий эффект<br/>Защита кожи головы<br/>Выравнивание поверхности волос и кондиционирующий эффект</span>
 				</div>
-				<div class="art__wrapper art-3__right">
-					<div class="art-3__img-2"></div>
+			</div>
+			<div class="art__wrapper art-3__right">
+				<div class="art-3__img-2"></div>
+			</div>
+		</article>
+		<article class="art art-4">
+			<div class="art__wrapper art-4__left">
+				<div class="art-4__main">
+					<img src="images/img_4-1.png" alt="image" class="art-4__img-1">
+					<span class="clr-white art-4__text-1 art-4__text-4-bold">VOLUME<br/>FLEX</span>
+					<span class="clr-white art-4__text-2">ШАМПУНЬ<br/>для тонких, тусклых<br/>и слабых волос</span>
+					<span class="clr-white art-4__text-4">Комплекс витаминов: E, C, F<br/>Протеины и олигосахариды пшеницы<br/>для поддержания уровня увлажненности<br/>Мягкое очищение волос без утяжеления<br/>Кондиционирующий эффект<br/>Придает объем и гладкость<br/>Обеспечивает естественную подвижность волос</span>
+					<span class="clr-black art-4__text-4">WHEAT PROTEINS<br/>VITAMINS COMPLEX E, C, F</span>
 				</div>
-			</article>
+			</div>
+			<div class="art__wrapper art-4__right">
+				<div class="art-4__img-2"></div>
+			</div>
+		</article>
 	</main>
 	<footer>
-		<h2>САЙТ НАХОДИТСЯ В РАЗРАБОТКЕ</h2>
 		<!-- ======== mail form =========== -->
 		<div class="container">
 			<div class="row">
