--- a/index.html
+++ b/index.html
@@ -61,11 +61,11 @@
 				<div class="art-2__main">
 					<span class="clr-black art-2__text-1">Top Color</span>
 					<span class="clr-white art-2__text-2">СТОЙКАЯ КРЕМ-КРАСКА<br/>ДЛЯ ВОЛОС</span>
-					<img src="images/img_2-1.svg" alt="image" class="art-2__img-1">
-					<span class="clr-black art-2__text-4 art-2__text-4-bold">Уникальная формула PENTA CARE SYSTEM:</span>
-					<span class="clr-black art-2__text-4">Насыщенный и устойчивый цвет<br/>благодаря Chroma Care Protection</span>
-					<span class="clr-black art-2__text-4">Аргановое масло для максимальной гладкости<br/>и блеска волос</span>
-					<span class="clr-black art-2__text-4">Экстракт Алоэ для комфорта при окрашивании<br/>и защиты кожи головы</span>
+					<img src="images/img_2-1.svg" alt="image" class="art-2__img-1 dNone">
+					<span class="clr-black art-2__text-4 art-2__text-4-bold dNone">Уникальная формула PENTA CARE SYSTEM:</span>
+					<span class="clr-black art-2__text-4 dNone">Насыщенный и устойчивый цвет<br/>благодаря Chroma Care Protection</span>
+					<span class="clr-black art-2__text-4 dNone">Аргановое масло для максимальной гладкости<br/>и блеска волос</span>
+					<span class="clr-black art-2__text-4 dNone">Экстракт Алоэ для комфорта при окрашивании<br/>и защиты кожи головы</span>
 				</div>
 			</div>
 			<div class="art__wrapper art-2__right">
@@ -77,10 +77,10 @@
 				<div class="art-3__main">
 					<span class="clr-white art-3__text-2">ОСВЕТЛЯЮЩИЙ<br/>ПОРОШОК</span>
 					<span class="clr-main art-3__text-1">FLASH<br/>BLOND</span>
-					<span class="clr-white art-3__text-4">Система BOND REBUILDER SYSTEM<br/>восстанавливает поврежденные участки кортекса и волокна волос</span>
-					<span class="clr-white art-3__text-4">VITAOILS - комплекс из 5 масел: с высоким содержанием витаминов A, E, D жирных кислот</span>
-					<img src="images/img_3-1.png" alt="image" class="art-3__img-1">
-					<span class="clr-white art-3__text-4">До 9 уровней осветления<br/>Мощный питательный и восстанавливающий эффект<br/>Защита кожи головы<br/>Выравнивание поверхности волос и кондиционирующий эффект</span>
+					<span class="clr-white art-3__text-4 dNone">Система BOND REBUILDER SYSTEM<br/>восстанавливает поврежденные участки кортекса и волокна волос</span>
+					<span class="clr-white art-3__text-4 dNone">VITAOILS - комплекс из 5 масел: с высоким содержанием витаминов A, E, D жирных кислот</span>
+					<img src="images/img_3-1.png" alt="image" class="art-3__img-1 dNone">
+					<span class="clr-white art-3__text-4 dNone">До 9 уровней осветления<br/>Мощный питательный и восстанавливающий эффект<br/>Защита кожи головы<br/>Выравнивание поверхности волос и кондиционирующий эффект</span>
 				</div>
 			</div>
 			<div class="art__wrapper art-3__right">
@@ -93,12 +93,117 @@
 					<img src="images/img_4-1.png" alt="image" class="art-4__img-1">
 					<span class="clr-white art-4__text-1 art-4__text-4-bold">VOLUME<br/>FLEX</span>
 					<span class="clr-white art-4__text-2">ШАМПУНЬ<br/>для тонких, тусклых<br/>и слабых волос</span>
-					<span class="clr-white art-4__text-4">Комплекс витаминов: E, C, F<br/>Протеины и олигосахариды пшеницы<br/>для поддержания уровня увлажненности<br/>Мягкое очищение волос без утяжеления<br/>Кондиционирующий эффект<br/>Придает объем и гладкость<br/>Обеспечивает естественную подвижность волос</span>
-					<span class="clr-black art-4__text-4">WHEAT PROTEINS<br/>VITAMINS COMPLEX E, C, F</span>
+					<span class="clr-white art-4__text-4 dNone">Комплекс витаминов: E, C, F<br/>Протеины и олигосахариды пшеницы<br/>для поддержания уровня увлажненности<br/>Мягкое очищение волос без утяжеления<br/>Кондиционирующий эффект<br/>Придает объем и гладкость<br/>Обеспечивает естественную подвижность волос</span>
+					<span class="clr-black art-4__text-4 dNone">WHEAT PROTEINS<br/>VITAMINS COMPLEX E, C, F</span>
 				</div>
 			</div>
 			<div class="art__wrapper art-4__right">
 				<div class="art-4__img-2"></div>
+			</div>
+		</article>
+		<article class="art art-5">
+			<div class="art__wrapper art-5__left">
+				<div class="art-5__main">
+					<span class="clr-white art-5__text-1 art-5__text-4-bold">EXTRA<br/>STRENGTH</span>
+					<img src="images/img_5-1.png" alt="image" class="art-5__img-1">
+					<span class="clr-white art-5__text-2">ШАМПУНЬ<br/>для всех типов волос</span>
+					<span class="clr-white art-5__text-4 dNone">Эффективно очищает и бережно ухаживает<br/>за всеми типами волос<br/>Гладкость и защита волос благодаря биосахаридам,<br/>протеинам и сочетанию аминокислот,<br/>полученных из пшеницы и сои<br/>Кондиционирование<br/>и мягкость волос без утяжеления</span>
+					<span class="clr-black art-5__text-4 dNone">VEGETABLE PROTEINS<br/>BIOSACCHARIDES</span>
+				</div>
+			</div>
+			<div class="art__wrapper art-5__right">
+				<div class="art-5__img-2"></div>
+			</div>
+		</article>
+		<article class="art art-6">
+			<div class="art__wrapper art-6__left">
+				<div class="art-6__main">
+					<span class="clr-white art-6__text-1 art-6__text-4-bold">MAXIMUM<br/>COLOR</span>
+					<span class="clr-white art-6__text-2">МАСКА ДЛЯ<br/>ОКРАШЕНЫХ<br/>ВОЛОС</span>
+					<span class="clr-white art-6__text-4 dNone">Максимальное восстановление<br/>и защита цвета окрашенных волос<br/>Идеальное кондиционирование<br/>Легкое расчёсывание<br/>Антистатический эффект</span>
+					<span class="clr-black art-6__text-4 dNone">VEGETABLE ORIGIN KERATIN<br/>MONOI DE TAHITI<br/><span class="clr-white">UV-SECURITY</span></span>
+				</div>
+			</div>
+			<div class="art__wrapper art-6__right">
+				<div class="art-6__img-2"></div>
+			</div>
+		</article>
+		<article class="art art-7">
+			<div class="art__wrapper art-7__left">
+				<div class="art-7__main">
+					<span class="clr-white art-7__text-1 art-7__text-4-bold">MAXIMUM<br/>COLOR</span>
+					<img src="images/img_7-1.png" alt="image" class="art-7__img-1">
+					<span class="clr-white art-7__text-2">ШАМПУНЬ<br/><span class="dNone">для окрашенных<br/>волос</span></span>
+					<span class="clr-white art-7__text-4 dNone">Бережно очищает<br/>Сохраняет яркость цвета<br/>окрашенных волос</span>
+					<span class="clr-white art-7__text-2">КОНДИЦИОНЕР<br/>для окрашенных<br/>волос</span>
+					<span class="clr-white art-7__text-4 dNone">Поддерживает яркость цвета<br/>после окрашивания<br/>Придаёт гладкость<br/>Обеспечивает легкое расчёсывание<br/>Антистатический эффект<br/>окрашенным волосам</span>
+					<span class="clr-black art-7__text-4 dNone">VEGETABLE ORIGIN KERATIN<br/>MONOI DE TAHITI<br/><span class="clr-white">UV-SECURITY</span></span>
+				</div>
+			</div>
+			<div class="art__wrapper art-7__right">
+				<div class="art-7__img-2"></div>
+			</div>
+		</article>
+		<article class="art art-8">
+			<div class="art__wrapper art-8__left">
+				<div class="art-8__main">
+					<span class="clr-white art-8__text-1 art-8__text-4-bold">EXTRA<br/>MOISTURE</span>
+					<span class="clr-white art-8__text-2">МАСКА ДЛЯ СУХИХ<br/>И ПОВРЕЖДЕННЫХ<br/>ВОЛОС</span>
+					<span class="clr-white art-8__text-4 dNone">Экстремальное восстановление поврежденных волос<br/>Уникальная комбинация минералов и 2-х масел:<br/>Аргановое масло и масло Ши<br/>Смесь аминокислот обогащенная аргинином<br/>обеспечивает максимальное увлажнение<br/>и защиту от потери влаги</span>
+					<span class="clr-black art-8__text-4 dNone">ARGAN OIL<br/>SHEA BUTTER</span>
+				</div>
+			</div>
+			<div class="art__wrapper art-8__right">
+				<div class="art-8__img-2"></div>
+			</div>
+		</article>
+		<article class="art art-9">
+			<div class="art__wrapper art-9__left">
+				<div class="art-9__main">
+					<span class="clr-white art-9__text-1 art-9__text-4-bold">EXTRA<br/>MOISTURE</span>
+					<img src="images/img_9-1.png" alt="image" class="art-9__img-1">
+					<span class="clr-white art-9__text-2">ШАМПУНЬ<br/><span class="dNone">для сухих<br/>и поврежденных волос</span></span>
+					<span class="clr-white art-9__text-4 dNone">Мягко очизает и интенсивно ухаживает<br/>Уникальная комбинация<br/>аминокислот и минералов</span>
+					<span class="clr-white art-9__text-2">КОНДИЦИОНЕР<br/>для сухих<br/>и поврежденных волос</span>
+					<span class="clr-white art-9__text-4 dNone">Аргинин и Sodium PCA<br/>для восстановления поврежденных волос<br/>Интенсивное кондиционирование<br/>Восстановление гидробаланса волос<br/>Экстра защита волос от ломкости</span>
+					<span class="clr-black art-9__text-4 dNone">ARGAN OIL</span>
+				</div>
+			</div>
+			<div class="art__wrapper art-9__right">
+				<div class="art-9__img-2"></div>
+			</div>
+		</article>
+		<article class="art art-10">
+			<div class="art__wrapper art-10__left">
+				<div class="art-10__main">
+					<span class="clr-white art-10__text-1 art-10__text-4-bold">2 PHASE SPRAY<br/>CONDITIONER</span>
+					<span class="clr-white art-10__text-2">ДВУХФАЗНЫЙ СПРЕЙ<br/>КОНДИЦИОНЕР<br/>для окрашеных волос</span>
+					<span class="clr-white art-10__text-4 dNone">Экспресс-уход за волосами - 30 секунд<br/>для восстановления волос<br/>Полезный коктейль для волос: кератин растительного<br/>происхождения, сочетание 17 аминокислот,<br/>Монои де Таити и UV-security<br/>Идеальное расчесывание и эластичность волос<br/>Здоровый блеск и глядкость волос каждый день<br/>Защита от вредного воздействия окружающей среды</span>
+					<span class="clr-black art-10__text-4 dNone">MONOI DE TAHITI<br/>VEGETABLE ORIGIN KERATIN<br/><span class="clr-white">UV-SECURITY</span></span>
+				</div>
+			</div>
+			<div class="art__wrapper art-10__right">
+				<div class="art-10__img-2"></div>
+			</div>
+		</article>
+		<article class="art art-11">
+			<div class="art__wrapper art-11__left">
+				<div class="art-11__main">
+					<span class="clr-white art-11__text-1 art-11__text-4-bold">EASY<br/>MATTE<br/>WAX</span>
+					<img src="images/img_11-1.png" alt="image" class="art-11__img-1">
+					<span class="clr-white art-11__text-2">ВОСК С МАТОВЫМ<br/>ЭФФЕКТОМ</span>
+					<span class="clr-white art-11__text-4 dNone">Эластичная кремовая текстура - трансформер<br/>Безграничные возможности<br/>для создания формы и текстуры<br/>Пчелиный воск, пантенол и витамин B3<br/>для дополнительного ухода за волосами</span>
+					<span class="clr-black art-11__text-4 dNone">BEESWAX<br/>PANTHENOL<br/>B3 VITAMIN</span>
+				</div>
+			</div>
+			<div class="art__wrapper art-11__left art-11__right">
+				<div class="art-11__main">
+					<span class="clr-white art-11__text-1 art-11__text-4-bold">MOLDING<br/>CLAY</span>
+					<img src="images/img_11-2.png" alt="image" class="art-11__img-1">
+					<span class="clr-white art-11__text-2">МОДЕЛИРУЮЩАЯ<br/>ГЛИНА</span>
+					<span class="clr-white art-11__text-4 dNone">Максимум возможностей для<br/>создания формы<br/>и текстуры для тонких волос<br/>Матовый финиш<br/>Пчелиный воск для ухода за волосами</span>
+					<span class="clr-black art-11__text-4 dNone">BEESWAX</span>
+				</div>
 			</div>
 		</article>
 	</main>
