--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 			</div>
 			<div class="art__wrapper">
 				<img src="images/logo_white.svg" alt="logo" class="art-0__logo-3">
-				<p class="clr-white art-0__text-3">ПРОФЕССИОНАЛЬНАЯ<br/>КОСМТИКА ДЛЯ ВОЛОС</p>
+				<p class="clr-white art-0__text-3">ПРОФЕССИОНАЛЬНАЯ<br/>КОСМЕТИКА ДЛЯ ВОЛОС</p>
 			</div>
 		</article>
 		<article class="art art-1">
@@ -51,7 +51,7 @@
 					<p class="clr-black art-1__desc__text-2">
 						<span class="clr-white">НАША ФИЛОСОФИЯ</span>
 						<br/>
-						МЫ ХОТИМ ЧТОБЫ С ПОМОЩЬЮ<br/>НАШИХ СОВРЕМЕННЫХ,<br/>ПРЕМИАЛЬНЫХ ПРОДУКТОВ<br/>ЖЕНЩИНА БЫЛА ВСЕГДА<br/>ПРИВЛЕКАТЕЛЬНА И НЕОТРАЗИМА,<br/>А ПАРИКМАХЕР ВДОХНОВЛЕН
+						МЫ ХОТИМ, ЧТОБЫ С ПОМОЩЬЮ<br/>НАШИХ СОВРЕМЕННЫХ,<br/>ПРЕМИАЛЬНЫХ ПРОДУКТОВ<br/>ЖЕНЩИНА БЫЛА ВСЕГДА<br/>ПРИВЛЕКАТЕЛЬНА И НЕОТРАЗИМА,<br/>А ПАРИКМАХЕР ВДОХНОВЛЕН
 					</p>
 				</div>
 			</div>
