fix all mobile resolutions

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 					<span class="clr-main art-3__text-1">FLASH<br/>BLOND</span>
 					<span class="clr-white art-3__text-4 dNone">Система BOND REBUILDER SYSTEM<br/>восстанавливает поврежденные участки кортекса и волокна волос</span>
 					<span class="clr-white art-3__text-4 dNone">VITAOILS - комплекс из 5 масел: с высоким содержанием витаминов A, E, D жирных кислот</span>
-					<img src="images/img_3-1.png" alt="image" class="art-3__img-1">
+					<img src="images/img_3-1.png" alt="image" class="art-3__img-1 dNone dPortraitNone">
 					<span class="clr-white art-3__text-4 dNone">До 9 уровней осветления<br/>Мощный питательный и восстанавливающий эффект<br/>Защита кожи головы<br/>Выравнивание поверхности волос и кондиционирующий эффект</span>
 				</div>
 			</div>
@@ -90,8 +90,8 @@
 		<article class="art art-4">
 			<div class="art__wrapper art-4__left">
 				<div class="art-4__main">
-					<img src="images/img_4-1.png" alt="image" class="art-4__img-1 dPortraitNone">
-					<span class="clr-white art-4__text-1 art-4__text-4-bold">VOLUME<br/>FLEX</span>
+					<img src="images/img_4-1.png" alt="image" class="art-4__img-1 dPortraitNone dNone">
+					<span class="clr-white art-4__text-1 art-4__text-4-bold moneBold">VOLUME<br/>FLEX</span>
 					<span class="clr-white art-4__text-2">ШАМПУНЬ<br/>для тонких, тусклых<br/>и слабых волос</span>
 					<span class="clr-white art-4__text-4 dNone">Комплекс витаминов: E, C, F<br/>Протеины и олигосахариды пшеницы<br/>для поддержания уровня увлажненности<br/>Мягкое очищение волос без утяжеления<br/>Кондиционирующий эффект<br/>Придает объем и гладкость<br/>Обеспечивает естественную подвижность волос</span>
 					<span class="clr-black art-4__text-4 art__text-0 dNone">WHEAT PROTEINS<br/>VITAMINS COMPLEX E, C, F</span>
@@ -104,8 +104,8 @@
 		<article class="art art-5">
 			<div class="art__wrapper art-5__left">
 				<div class="art-5__main">
-					<span class="clr-white art-5__text-1 art-5__text-4-bold">EXTRA<br/>STRENGTH</span>
-					<img src="images/img_5-1.png" alt="image" class="art-5__img-1 dPortraitNone">
+					<span class="clr-white art-5__text-1 art-5__text-4-bold moneBold">EXTRA<br/>STRENGTH</span>
+					<img src="images/img_5-1.png" alt="image" class="art-5__img-1 dPortraitNone dNone">
 					<span class="clr-white art-5__text-2">ШАМПУНЬ<br/>для всех типов волос</span>
 					<span class="clr-white art-5__text-4 dNone">Эффективно очищает и бережно ухаживает<br/>за всеми типами волос<br/>Гладкость и защита волос благодаря биосахаридам,<br/>протеинам и сочетанию аминокислот,<br/>полученных из пшеницы и сои<br/>Кондиционирование<br/>и мягкость волос без утяжеления</span>
 					<span class="clr-black art-5__text-4 art__text-0 dNone">VEGETABLE PROTEINS<br/>BIOSACCHARIDES</span>
@@ -118,7 +118,7 @@
 		<article class="art art-6">
 			<div class="art__wrapper art-6__left">
 				<div class="art-6__main">
-					<span class="clr-white art-6__text-1 art-6__text-4-bold">MAXIMUM<br/>COLOR</span>
+					<span class="clr-white art-6__text-1 art-6__text-4-bold moneBold">MAXIMUM<br/>COLOR</span>
 					<span class="clr-white art-6__text-2">МАСКА ДЛЯ<br/>ОКРАШЕНЫХ<br/>ВОЛОС</span>
 					<span class="clr-white art-6__text-4 dNone">Максимальное восстановление<br/>и защита цвета окрашенных волос<br/>Идеальное кондиционирование<br/>Легкое расчёсывание<br/>Антистатический эффект</span>
 					<span class="clr-black art-6__text-4 art__text-0 dNone">VEGETABLE ORIGIN KERATIN<br/>MONOI DE TAHITI<br/><span class="clr-white">UV-SECURITY</span></span>
@@ -131,8 +131,8 @@
 		<article class="art art-7">
 			<div class="art__wrapper art-7__left">
 				<div class="art-7__main">
-					<span class="clr-white art-7__text-1 art-7__text-4-bold">MAXIMUM<br/>COLOR</span>
-					<img src="images/img_7-1.png" alt="image" class="art-7__img-1 dPortraitNone">
+					<span class="clr-white art-7__text-1 art-7__text-4-bold moneBold">MAXIMUM<br/>COLOR</span>
+					<img src="images/img_7-1.png" alt="image" class="art-7__img-1 dPortraitNone dNone">
 					<span class="clr-white art-7__text-2">ШАМПУНЬ<br/><span class="dNone">для окрашенных<br/>волос</span></span>
 					<span class="clr-white art-7__text-4 dNone">Бережно очищает<br/>Сохраняет яркость цвета<br/>окрашенных волос</span>
 					<span class="clr-white art-7__text-2">КОНДИЦИОНЕР<br/>для окрашенных<br/>волос</span>
@@ -147,7 +147,7 @@
 		<article class="art art-8">
 			<div class="art__wrapper art-8__left">
 				<div class="art-8__main">
-					<span class="clr-white art-8__text-1 art-8__text-4-bold">EXTRA<br/>MOISTURE</span>
+					<span class="clr-white art-8__text-1 art-8__text-4-bold moneBold">EXTRA<br/>MOISTURE</span>
 					<span class="clr-white art-8__text-2">МАСКА ДЛЯ СУХИХ<br/>И ПОВРЕЖДЕННЫХ<br/>ВОЛОС</span>
 					<span class="clr-white art-8__text-4 dNone">Экстремальное восстановление поврежденных волос<br/>Уникальная комбинация минералов и 2-х масел:<br/>Аргановое масло и масло Ши<br/>Смесь аминокислот обогащенная аргинином<br/>обеспечивает максимальное увлажнение<br/>и защиту от потери влаги</span>
 					<span class="clr-black art-8__text-4 art__text-0 dNone">ARGAN OIL<br/>SHEA BUTTER</span>
@@ -160,8 +160,8 @@
 		<article class="art art-9">
 			<div class="art__wrapper art-9__left">
 				<div class="art-9__main">
-					<span class="clr-white art-9__text-1 art-9__text-4-bold">EXTRA<br/>MOISTURE</span>
-					<img src="images/img_9-1.png" alt="image" class="art-9__img-1 dPortraitNone">
+					<span class="clr-white art-9__text-1 art-9__text-4-bold moneBold">EXTRA<br/>MOISTURE</span>
+					<img src="images/img_9-1.png" alt="image" class="art-9__img-1 dPortraitNone dNone">
 					<span class="clr-white art-9__text-2">ШАМПУНЬ<br/><span class="dNone">для сухих<br/>и поврежденных волос</span></span>
 					<span class="clr-white art-9__text-4 dNone">Мягко очизает и интенсивно ухаживает<br/>Уникальная комбинация<br/>аминокислот и минералов</span>
 					<span class="clr-white art-9__text-2">КОНДИЦИОНЕР<br/>для сухих<br/>и поврежденных волос</span>
@@ -176,7 +176,7 @@
 		<article class="art art-10">
 			<div class="art__wrapper art-10__left">
 				<div class="art-10__main">
-					<span class="clr-white art-10__text-1 art-10__text-4-bold">2 PHASE SPRAY<br/>CONDITIONER</span>
+					<span class="clr-white art-10__text-1 art-10__text-4-bold moneBold">2 PHASE SPRAY<br/>CONDITIONER</span>
 					<span class="clr-white art-10__text-2">ДВУХФАЗНЫЙ СПРЕЙ<br/>КОНДИЦИОНЕР<br/>для окрашеных волос</span>
 					<span class="clr-white art-10__text-4 dNone">Экспресс-уход за волосами - 30 секунд<br/>для восстановления волос<br/>Полезный коктейль для волос: кератин растительного<br/>происхождения, сочетание 17 аминокислот,<br/>Монои де Таити и UV-security<br/>Идеальное расчесывание и эластичность волос<br/>Здоровый блеск и глядкость волос каждый день<br/>Защита от вредного воздействия окружающей среды</span>
 					<span class="clr-black art-10__text-4 art__text-0 dNone">MONOI DE TAHITI<br/>VEGETABLE ORIGIN KERATIN<br/><span class="clr-white">UV-SECURITY</span></span>
@@ -189,8 +189,8 @@
 		<article class="art art-11">
 			<div class="art__wrapper art-11__left">
 				<div class="art-11__main">
-					<img src="images/img_11-1.png" alt="image" class="art-11__img-1">
-					<span class="clr-white art-11__text-1 art-11__text-4-bold">EASY<br/>MATTE<br/>WAX</span>
+					<img src="images/img_11-1.png" alt="image" class="art-11__img-1 dPortraitNone dNone">
+					<span class="clr-white art-11__text-1 art-11__text-4-bold moneBold">EASY<br/>MATTE<br/>WAX</span>
 					<span class="clr-white art-11__text-2">ВОСК С МАТОВЫМ<br/>ЭФФЕКТОМ</span>
 					<span class="clr-white art-11__text-4 dNone">Эластичная кремовая текстура - трансформер<br/>Безграничные возможности<br/>для создания формы и текстуры<br/>Пчелиный воск, пантенол и витамин B3<br/>для дополнительного ухода за волосами</span>
 					<span class="clr-black art-11__text-4 dNone">BEESWAX<br/>PANTHENOL<br/>B3 VITAMIN</span>
@@ -198,8 +198,8 @@
 			</div>
 			<div class="art__wrapper art-11__left art-11__right">
 				<div class="art-11__main">
-					<img src="images/img_11-2.png" alt="image" class="art-11__img-1">
-					<span class="clr-white art-11__text-1 art-11__text-4-bold">MOLDING<br/>CLAY</span>
+					<img src="images/img_11-2.png" alt="image" class="art-11__img-1 dPortraitNone dNone">
+					<span class="clr-white art-11__text-1 art-11__text-4-bold moneBold">MOLDING<br/>CLAY</span>
 					<span class="clr-white art-11__text-2">МОДЕЛИРУЮЩАЯ<br/>ГЛИНА</span>
 					<span class="clr-white art-11__text-4 dNone">Максимум возможностей для<br/>создания формы<br/>и текстуры для тонких волос<br/>Матовый финиш<br/>Пчелиный воск для ухода за волосами</span>
 					<span class="clr-black art-11__text-4 dNone">BEESWAX</span>
