--- a/index.html
+++ b/index.html
@@ -265,6 +265,13 @@
 					</div>
 				</div>
 			</div>
+			<div class="art__wrapper">
+				<img src="images/logo_small.svg" alt="logo" class="art-0__logo-1">
+				<span class="clr-white art-0__text-1">ОФИЦИАЛЬНЫЙ<br/>СТИЛИСТ</span>
+			</div>
+			<div class="art__wrapper">
+				<img src="images/img_0.svg" alt="konkurs_miss-rossiya" class="art-0__logo-2">
+			</div>
 			<h4>+7 (495) 730-07-10 <br> г. Москва, Благовещенский переулок, д.1</h4>
 			<div class="social">
 				<a href="https://www.instagram.com/mone_moscow/" class="fb"><img src="images/facebook.png" alt="facebook"></a>
