--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 		<img src="images/logo.svg" class="logo"/>
 	</header>
 	<main class="wrapper">
-		<article class="art art-0">
+		<!-- <article class="art art-0">
 			<div class="art__wrapper">
 				<img src="images/logo_small.svg" alt="logo" class="art-0__logo-1">
 				<span class="clr-white art-0__text-1">ОФИЦИАЛЬНЫЙ<br/>СТИЛИСТ</span>
@@ -35,7 +35,7 @@
 				<img src="images/logo_white.svg" alt="logo" class="art-0__logo-3">
 				<p class="clr-white art-0__text-3">ПРОФЕССИОНАЛЬНАЯ<br/>КОСМЕТИКА ДЛЯ ВОЛОС</p>
 			</div>
-		</article>
+		</article> -->
 		<article class="art art-1">
 			<div class="art__wrapper art-1__left">
 				<div class="art-1__img-1"></div>
@@ -47,7 +47,8 @@
 					<img src="images/img_1-3.svg" alt="iamge" class="art-1__img-4">
 				</div>
 				<div class="art-1__desc">
-					<p class="clr-black art-1__desc__text-1">СОЗДАН ПАРИКМХЕРАМИ<br/>ДЛЯ ПАРИКМХЕРОВ</p>
+					<p class="clr-white art-0__text-3">ПРОФЕССИОНАЛЬНАЯ<br/>КОСМЕТИКА ДЛЯ ВОЛОС</p>
+					<p class="clr-black art-1__desc__text-1">СОЗДАН ПАРИКМАХЕРАМИ<br/>ДЛЯ ПАРИКМАХЕРОВ</p>
 					<p class="clr-black art-1__desc__text-2">
 						<span class="clr-white">НАША ФИЛОСОФИЯ</span>
 						<br/>
@@ -119,7 +120,7 @@
 			<div class="art__wrapper art-6__left">
 				<div class="art-6__main">
 					<span class="clr-white art-6__text-1 art-6__text-4-bold moneBold">MAXIMUM<br/>COLOR</span>
-					<span class="clr-white art-6__text-2">МАСКА ДЛЯ<br/>ОКРАШЕНЫХ<br/>ВОЛОС</span>
+					<span class="clr-white art-6__text-2">МАСКА ДЛЯ<br/>ОКРАШЕННЫХ<br/>ВОЛОС</span>
 					<span class="clr-white art-6__text-4 dNone">Максимальное восстановление<br/>и защита цвета окрашенных волос<br/>Идеальное кондиционирование<br/>Легкое расчёсывание<br/>Антистатический эффект</span>
 					<span class="clr-black art-6__text-4 art__text-0 dNone">VEGETABLE ORIGIN KERATIN<br/>MONOI DE TAHITI<br/><span class="clr-white">UV-SECURITY</span></span>
 				</div>
@@ -163,9 +164,9 @@
 					<span class="clr-white art-9__text-1 art-9__text-4-bold moneBold">EXTRA<br/>MOISTURE</span>
 					<img src="images/img_9-1.png" alt="image" class="art-9__img-1 dPortraitNone dNone">
 					<span class="clr-white art-9__text-2">ШАМПУНЬ<br/><span class="dNone">для сухих<br/>и поврежденных волос</span></span>
-					<span class="clr-white art-9__text-4 dNone">Мягко очизает и интенсивно ухаживает<br/>Уникальная комбинация<br/>аминокислот и минералов</span>
+					<span class="clr-white art-9__text-4 dNone">Мягко очищает и интенсивно ухаживает<br/>Уникальная комбинация<br/>аминокислот и минералов</span>
 					<span class="clr-white art-9__text-2">КОНДИЦИОНЕР<br/>для сухих<br/>и поврежденных волос</span>
-					<span class="clr-white art-9__text-4 dNone">Аргинин и Sodium PCA<br/>для восстановления поврежденных волос<br/>Интенсивное кондиционирование<br/>Восстановление гидробаланса волос<br/>Экстра защита волос от ломкости</span>
+					<span class="clr-white art-9__text-4 dNone">Аргинин и Sodium PCA<br/>для восстановления поврежденных волос<br/>Интенсивное кондиционирование<br/>Восстановление гидробаланса волос<br/>Экстразащита волос от ломкости</span>
 					<span class="clr-black art-9__text-4 art__text-0 dNone">ARGAN OIL</span>
 				</div>
 			</div>
@@ -177,8 +178,8 @@
 			<div class="art__wrapper art-10__left">
 				<div class="art-10__main">
 					<span class="clr-white art-10__text-1 art-10__text-4-bold moneBold">2 PHASE SPRAY<br/>CONDITIONER</span>
-					<span class="clr-white art-10__text-2">ДВУХФАЗНЫЙ СПРЕЙ<br/>КОНДИЦИОНЕР<br/>для окрашеных волос</span>
-					<span class="clr-white art-10__text-4 dNone">Экспресс-уход за волосами - 30 секунд<br/>для восстановления волос<br/>Полезный коктейль для волос: кератин растительного<br/>происхождения, сочетание 17 аминокислот,<br/>Монои де Таити и UV-security<br/>Идеальное расчесывание и эластичность волос<br/>Здоровый блеск и глядкость волос каждый день<br/>Защита от вредного воздействия окружающей среды</span>
+					<span class="clr-white art-10__text-2">ДВУХФАЗНЫЙ СПРЕЙ<br/>КОНДИЦИОНЕР<br/>для окрашенНых волос</span>
+					<span class="clr-white art-10__text-4 dNone">Экспресс-уход за волосами - 30 секунд<br/>для восстановления волос<br/>Полезный коктейль для волос: кератин растительного<br/>происхождения, сочетание 17 аминокислот,<br/>Монои де Таити и UV-security<br/>Идеальное расчесывание и эластичность волос<br/>Здоровый блеск и гладкость волос каждый день<br/>Защита от вредного воздействия окружающей среды</span>
 					<span class="clr-black art-10__text-4 art__text-0 dNone">MONOI DE TAHITI<br/>VEGETABLE ORIGIN KERATIN<br/><span class="clr-white">UV-SECURITY</span></span>
 				</div>
 			</div>
@@ -246,7 +247,6 @@
 						<div class="row">
 							<div class="form-group col-md-12 col-sm-12 col-xs-12 mb-30">
 								<div class="single-input">
-									<!-- <input id="m5" type="text" placeholder="Дополнительное сообщение *"> -->
 									<textarea id="m5" placeholder="Дополнительное сообщение *"></textarea>
 								</div>
 							</div>
@@ -265,14 +265,43 @@
 					</div>
 				</div>
 			</div>
+			<!--<div class="art__wrapper">
+				<h3>
+					<div>Вы можете оставить свою заявку и получить</div>
+					<div>индивидуальное коммерческое предложение</div>
+				</h3>
+				<div class="single-input">
+					<input id="m1" type="email" placeholder="Ваше имя *">
+				</div>
+				<div class="single-input">
+					<input id="m2" type="text" placeholder="Ваш телефон *">
+				</div>
+				<div class="single-input">
+					<input id="m3" type="email" placeholder="Ваш email *">
+				</div>
+				<div class="single-input">
+					<input id="m4" type="text" placeholder="Ваш город *">
+				</div>
+				<div class="single-input">
+					<textarea id="m5" placeholder="Дополнительное сообщение *"></textarea>
+				</div>
+				<div class="single-input skin_feedback flex">
+					<input id="m6" type="checkbox">
+					<label for="m6" class="label">Даю согласие на обработку моих персональных данных *</label>
+				</div>
+				<div class="col-md-12 text-center button">
+					<a href="javascript:sendmail($('#m1').val(),$('#m2').val(),$('#m3').val(),$('#m4').val(),$('#m5').val(),$('#m6').prop('checked'))">Оставить заявку</a>
+				</div>
+			</div>
 			<div class="art__wrapper">
 				<img src="images/logo_small.svg" alt="logo" class="art-0__logo-1">
 				<span class="clr-white art-0__text-1">ОФИЦИАЛЬНЫЙ<br/>СТИЛИСТ</span>
-			</div>
-			<div class="art__wrapper">
 				<img src="images/img_0.svg" alt="konkurs_miss-rossiya" class="art-0__logo-2">
-			</div>
-			<h4>+7 (495) 730-07-10 <br> г. Москва, Благовещенский переулок, д.1</h4>
+			</div> -->
+			<a href="https://salonmone.ru" target="_blank" class="contact mm">salonmone.ru</a>
+			<a href="https://moneprofessional.com" target="_blank" class="contact">moneprofessional.com</a>
+			<h4>По вопросам сотрудничества обращаться по телефону</h4>
+			<h4><a href="tel:+74957300710">+7 (495) 730-07-10</a><br> г. Москва, Благовещенский переулок, д.1</h4>
 			<div class="social">
 				<a href="https://www.instagram.com/mone_moscow/" class="fb"><img src="images/facebook.png" alt="facebook"></a>
 				<a href="https://www.facebook.com/monebeautysalons/" class="inst"><img src="images/instagram.png" alt="instagram"></a>
