--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<!-- favicon -->
 	<link rel="shortcut icon" type="image/x-icon" href="images/favicon.ico">
 	<link href="css/bootstrap.min.css" type="text/css" rel="stylesheet">
-	<link rel="stylesheet" type="text/css" href="css/onepage-scroll.css" />
+	<link rel="stylesheet" type="text/css" href="css/onepage-scroll.css" class="deleteOnepageScroll" />
 	<link href="css/fonts.css" type="text/css" rel="stylesheet">
 	<link href="css/style.css" type="text/css" rel="stylesheet">
 	<!-- ==================End Css Link===================== -->
@@ -76,6 +76,7 @@
 		<article class="art art-3">
 			<div class="art__wrapper art-3__left">
 				<div class="art-3__main">
+					<img src="images/img_3-1.png" alt="image" class="art-3__img-1 dBlock dImgNone">
 					<span class="clr-white art-3__text-2">ОСВЕТЛЯЮЩИЙ<br/>ПОРОШОК</span>
 					<span class="clr-main art-3__text-1">FLASH<br/>BLOND</span>
 					<span class="clr-white art-3__text-4 dNone">Система BOND REBUILDER SYSTEM<br/>восстанавливает поврежденные участки кортекса и волокна волос</span>
@@ -91,7 +92,7 @@
 		<article class="art art-4">
 			<div class="art__wrapper art-4__left">
 				<div class="art-4__main">
-					<img src="images/img_4-1.png" alt="image" class="art-4__img-1 dPortraitNone dNone">
+					<img src="images/img_4-1.png" alt="image" class="art-4__img-1 dBlock dPortraitNone">
 					<span class="clr-white art-4__text-1 art-4__text-4-bold moneBold">VOLUME<br/>FLEX</span>
 					<span class="clr-white art-4__text-2">ШАМПУНЬ<br/>для тонких, тусклых<br/>и слабых волос</span>
 					<span class="clr-white art-4__text-4 dNone">Комплекс витаминов: E, C, F<br/>Протеины и олигосахариды пшеницы<br/>для поддержания уровня увлажненности<br/>Мягкое очищение волос без утяжеления<br/>Кондиционирующий эффект<br/>Придает объем и гладкость<br/>Обеспечивает естественную подвижность волос</span>
@@ -105,8 +106,8 @@
 		<article class="art art-5">
 			<div class="art__wrapper art-5__left">
 				<div class="art-5__main">
+					<img src="images/img_5-1.png" alt="image" class="art-5__img-1 dBlock dPortraitNone">
 					<span class="clr-white art-5__text-1 art-5__text-4-bold moneBold">EXTRA<br/>STRENGTH</span>
-					<img src="images/img_5-1.png" alt="image" class="art-5__img-1 dPortraitNone dNone">
 					<span class="clr-white art-5__text-2">ШАМПУНЬ<br/>для всех типов волос</span>
 					<span class="clr-white art-5__text-4 dNone">Эффективно очищает и бережно ухаживает<br/>за всеми типами волос<br/>Гладкость и защита волос благодаря биосахаридам,<br/>протеинам и сочетанию аминокислот,<br/>полученных из пшеницы и сои<br/>Кондиционирование<br/>и мягкость волос без утяжеления</span>
 					<span class="clr-black art-5__text-4 art__text-0 dNone">VEGETABLE PROTEINS<br/>BIOSACCHARIDES</span>
@@ -132,8 +133,8 @@
 		<article class="art art-7">
 			<div class="art__wrapper art-7__left">
 				<div class="art-7__main">
+					<img src="images/img_7-1.png" alt="image" class="art-7__img-1 dBlock dPortraitNone">
 					<span class="clr-white art-7__text-1 art-7__text-4-bold moneBold">MAXIMUM<br/>COLOR</span>
-					<img src="images/img_7-1.png" alt="image" class="art-7__img-1 dPortraitNone dNone">
 					<span class="clr-white art-7__text-2">ШАМПУНЬ<br/><span class="dNone">для окрашенных<br/>волос</span></span>
 					<span class="clr-white art-7__text-4 dNone">Бережно очищает<br/>Сохраняет яркость цвета<br/>окрашенных волос</span>
 					<span class="clr-white art-7__text-2">КОНДИЦИОНЕР<br/>для окрашенных<br/>волос</span>
@@ -161,8 +162,8 @@
 		<article class="art art-9">
 			<div class="art__wrapper art-9__left">
 				<div class="art-9__main">
+					<img src="images/img_9-1.png" alt="image" class="art-9__img-1 dBlock dPortraitNone">
 					<span class="clr-white art-9__text-1 art-9__text-4-bold moneBold">EXTRA<br/>MOISTURE</span>
-					<img src="images/img_9-1.png" alt="image" class="art-9__img-1 dPortraitNone dNone">
 					<span class="clr-white art-9__text-2">ШАМПУНЬ<br/><span class="dNone">для сухих<br/>и поврежденных волос</span></span>
 					<span class="clr-white art-9__text-4 dNone">Мягко очищает и интенсивно ухаживает<br/>Уникальная комбинация<br/>аминокислот и минералов</span>
 					<span class="clr-white art-9__text-2">КОНДИЦИОНЕР<br/>для сухих<br/>и поврежденных волос</span>
@@ -178,7 +179,7 @@
 			<div class="art__wrapper art-10__left">
 				<div class="art-10__main">
 					<span class="clr-white art-10__text-1 art-10__text-4-bold moneBold">2 PHASE SPRAY<br/>CONDITIONER</span>
-					<span class="clr-white art-10__text-2">ДВУХФАЗНЫЙ СПРЕЙ<br/>КОНДИЦИОНЕР<br/>для окрашенНых волос</span>
+					<span class="clr-white art-10__text-2">ДВУХФАЗНЫЙ СПРЕЙ<br/>КОНДИЦИОНЕР<br/>для окрашенных волос</span>
 					<span class="clr-white art-10__text-4 dNone">Экспресс-уход за волосами - 30 секунд<br/>для восстановления волос<br/>Полезный коктейль для волос: кератин растительного<br/>происхождения, сочетание 17 аминокислот,<br/>Монои де Таити и UV-security<br/>Идеальное расчесывание и эластичность волос<br/>Здоровый блеск и гладкость волос каждый день<br/>Защита от вредного воздействия окружающей среды</span>
 					<span class="clr-black art-10__text-4 art__text-0 dNone">MONOI DE TAHITI<br/>VEGETABLE ORIGIN KERATIN<br/><span class="clr-white">UV-SECURITY</span></span>
 				</div>
@@ -190,7 +191,7 @@
 		<article class="art art-11">
 			<div class="art__wrapper art-11__left">
 				<div class="art-11__main">
-					<img src="images/img_11-1.png" alt="image" class="art-11__img-1 dPortraitNone dNone">
+					<img src="images/img_11-1.png" alt="image" class="art-11__img-1 dBlock dPortraitNone">
 					<span class="clr-white art-11__text-1 art-11__text-4-bold moneBold">EASY<br/>MATTE<br/>WAX</span>
 					<span class="clr-white art-11__text-2">ВОСК С МАТОВЫМ<br/>ЭФФЕКТОМ</span>
 					<span class="clr-white art-11__text-4 dNone">Эластичная кремовая текстура - трансформер<br/>Безграничные возможности<br/>для создания формы и текстуры<br/>Пчелиный воск, пантенол и витамин B3<br/>для дополнительного ухода за волосами</span>
@@ -199,7 +200,7 @@
 			</div>
 			<div class="art__wrapper art-11__left art-11__right">
 				<div class="art-11__main">
-					<img src="images/img_11-2.png" alt="image" class="art-11__img-1 dPortraitNone dNone">
+					<img src="images/img_11-2.png" alt="image" class="art-11__img-1 dBlock dPortraitNone">
 					<span class="clr-white art-11__text-1 art-11__text-4-bold moneBold">MOLDING<br/>CLAY</span>
 					<span class="clr-white art-11__text-2">МОДЕЛИРУЮЩАЯ<br/>ГЛИНА</span>
 					<span class="clr-white art-11__text-4 dNone">Максимум возможностей для<br/>создания формы<br/>и текстуры для тонких волос<br/>Матовый финиш<br/>Пчелиный воск для ухода за волосами</span>
