--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
 		<article class="art art-7">
 			<div class="art__wrapper art-7__left">
 				<div class="art-7__main">
-					<img src="images/img_7-1.png" alt="image" class="art-7__img-1 dBlock dPortraitNone">
+					<img src="images/img_7-1.jpg" alt="image" class="art-7__img-1 dBlock dPortraitNone">
 					<span class="clr-white art-7__text-1 art-7__text-4-bold moneBold">MAXIMUM<br/>COLOR</span>
 					<span class="clr-white art-7__text-2">ШАМПУНЬ<br/><span class="dNone">для окрашенных<br/>волос</span></span>
 					<span class="clr-white art-7__text-4 dNone">Бережно очищает<br/>Сохраняет яркость цвета<br/>окрашенных волос</span>
@@ -162,7 +162,7 @@
 		<article class="art art-9">
 			<div class="art__wrapper art-9__left">
 				<div class="art-9__main">
-					<img src="images/img_9-1.png" alt="image" class="art-9__img-1 dBlock dPortraitNone">
+					<img src="images/img_9-1.jpg" alt="image" class="art-9__img-1 dBlock dPortraitNone">
 					<span class="clr-white art-9__text-1 art-9__text-4-bold moneBold">EXTRA<br/>MOISTURE</span>
 					<span class="clr-white art-9__text-2">ШАМПУНЬ<br/><span class="dNone">для сухих<br/>и поврежденных волос</span></span>
 					<span class="clr-white art-9__text-4 dNone">Мягко очищает и интенсивно ухаживает<br/>Уникальная комбинация<br/>аминокислот и минералов</span>
